# CSC471-Program-2

OGLBaseP2/: CMakeLists.txt  README.md
OGLBaseP2/resources/: simple_frag.glsl
OGLBaseP2/src/: Shape.cpp  Shape.h  main.cpp
OGLBaseP4/: CMakeLists.txt  README.md
OGLBaseP4/resources/: skybox_frag.glsl  skybox_vert.glsl  tex_frag.glsl  tex_frag0.glsl  voxel_frag.glsl  voxel_vert.glsl
OGLBaseP4/src/: ChunkData.cpp  ChunkData.h  ChunkMesh.cpp  ChunkMesh.h  ChunkSystem.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Vertex.h  WindowManager.cpp  World.cpp  World.h  main.cpp
